compiler/e2e/test/snapshot/issues/52/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the value is used after it has been moved
  ╭─ compiler/e2e/test/snapshot/issues/52/main.pnx:8:14
  │
6 │     useValue(value.0)
  │              ------- the value was moved here
7 │     useValue(value.1)
8 │     useValue(value.0)
  │              ^^^^^^^

error: Compilation aborted due to 1 error(s)



stdout:
